)added city name+ description(html+CSS

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
             <input type="submit" value="Search" class="searchButton" />
           </form>
         </span>
+        <div>
+          <h1>Tehran</h1>
+          <ul>
+            <li>12°C°F</li>
+            <li>Precipitation: 1%</li>
+            <li>Humidity: 53%</li>
+            <li>Wind: 8 km/h</li>
+          </ul>
+        </div>
       </div>
     </div>
     <script src="src/app.js"></script>
