--- a/index.html
+++ b/index.html
@@ -31,13 +31,46 @@
           </form>
         </span>
         <div>
-          <h1>Tehran</h1>
+            <div class="row firstSection">
+            <div class="col-4">
+icon            </div>
+              <div class="col-4">
+                <h1>Tehran</h1>
+            </div>
+              <div class="col-4">
+                Friday 10:50
+            </div>
+</div>
           <ul>
+
             <li>12°C°F</li>
             <li>Precipitation: 1%</li>
             <li>Humidity: 53%</li>
             <li>Wind: 8 km/h</li>
           </ul>
+        </div>
+        <div class="buttomSection">
+       <div class="row">
+    <div class="col col--1of6">
+     1
+    </div>
+    <div class="col col--1of6">
+    2
+    </div>
+    <div class="col col--1of6">
+     3
+    </div>
+    <div class="col col--1of6">
+     4
+    </div>
+    <div class="col col--1of6">
+     5
+    </div>
+    <div class="col col--1of6">
+    6
+    </div>
+  </div>
+  </div>
         </div>
       </div>
     </div>
