added unit conversion

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="wholePage">
         <span>
-          <form id="search-bar">
+          <form id="search-form">
             <input
               type="text"
               placeholder="Enter a city"
@@ -39,31 +39,34 @@
         <div>
           <div class="row firstSection">
             <div class="col-4">
-              <img
-                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
-                alt=""
-                id="icon"
-              />
+              <img src="#" id="icon" />
             </div>
             <div class="col-4">
-              <h1>Tehran</h1>
+              <h1 id="city"></h1>
             </div>
             <div class="col-4">
-              <div id="date" class="date">Friday 10:45</div>
+              <div id="date" class="date"></div>
             </div>
           </div>
 
           <h2>
-            <span id="temperature">12</span>
-            °C|°F
+            <span id="temperature"></span>
+            <span class="temp"
+              ><a href="" id="celsius-link" class="celsius">°C</a>|<a
+                href=""
+                id="fahrenheit-link"
+                class="fahrenheit"
+                >°F</a
+              ></span
+            >
           </h2>
           <ul>
             <li>
               Humidity:
-              <span id="humidity">53%</span>
+              <span id="humidity"></span>
             </li>
 
-            <li>Wind: <span id="wind">8</span> km/h</li>
+            <li>Wind: <span id="wind"></span> km/h</li>
           </ul>
         </div>
         <div class="buttomSection">
