complete unit conversion

--- a/index.html
+++ b/index.html
@@ -49,17 +49,12 @@
             </div>
           </div>
 
-          <h2>
-            <span id="temperature"></span>
-            <span class="temp"
-              ><a href="" id="celsius-link" class="celsius">°C</a>|<a
-                href=""
-                id="fahrenheit-link"
-                class="fahrenheit"
-                >°F</a
-              ></span
-            >
-          </h2>
+          <strong id="temperature" class="weather-temperature"> </strong
+          ><span class="units"></span>
+            <a href="#" id="celsius-link" class="active"> °C</a> |
+            <a href="#" id="fahrenheit-link" class="faren">°F</a></span
+          >
+
           <ul>
             <li>
               Humidity:
