added source code link

--- a/index.html
+++ b/index.html
@@ -74,8 +74,18 @@
             <div class="col col--1of6">6</div>
           </div>
         </div>
+             <small>
+          <a
+            href="https://github.com/Rezvaneh2022/Great-Weather-App"
+            target="_blank"
+            >Open-source code</a
+          >
+          by Rezvaneh Hosseini
+        </small>
       </div>
+     
     </div>
+
     <script src="src/app.js"></script>
   </body>
 </html>
