edited CSS - color of the page

--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
 
           <strong id="temperature" class="weather-temperature"> </strong
           ><span class="units"></span>
-            <a href="#" id="celsius-link" class="active"> °C</a> |
-            <a href="#" id="fahrenheit-link" class="faren">°F</a></span
-          >
+          <a href="#" id="celsius-link" class="active"> °C</a> |
+          <a href="#" id="fahrenheit-link" class="faren">°F</a>
 
           <ul>
             <li>
@@ -66,24 +65,22 @@
         </div>
         <div class="buttomSection">
           <div class="row">
-            <div class="col col--1of6">1</div>
-            <div class="col col--1of6">2</div>
-            <div class="col col--1of6">3</div>
-            <div class="col col--1of6">4</div>
-            <div class="col col--1of6">5</div>
-            <div class="col col--1of6">6</div>
+            <div class="col col--1of6"></div>
+            <div class="col col--1of6"></div>
+            <div class="col col--1of6"></div>
+            <div class="col col--1of6"></div>
+            <div class="col col--1of6"></div>
+            <div class="col col--1of6"></div>
           </div>
         </div>
-             <small>
-          <a
-            href="https://github.com/Rezvaneh2022/Great-Weather-App"
-            target="_blank"
-            >Open-source code</a
-          >
-          by Rezvaneh Hosseini
-        </small>
+        <a
+          href="https://github.com/Rezvaneh2022/Great-Weather-App"
+          target="_blank"
+          class="gitLink"
+          >Open-source code</a
+        >
+        by Rezvaneh Hosseini
       </div>
-     
     </div>
 
     <script src="src/app.js"></script>
