added forecast section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,18 @@
         </div>
         <div class="buttomSection">
           <div class="row">
-            <div class="col col--1of6"></div>
+            <div class="col col--1of6">
+              <div class="forcast-date">Sunday</div>
+              <img
+                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
+                width="90px"
+                class="dorcast-icon"
+              />
+              <div class="forcast-temp">
+                <span>10°C --</span>
+                <span> 20°C</span>
+              </div>
+            </div>
             <div class="col col--1of6"></div>
             <div class="col col--1of6"></div>
             <div class="col col--1of6"></div>
