corrected forecast section

--- a/index.html
+++ b/index.html
@@ -63,29 +63,25 @@
             <li>Wind: <span id="wind"></span> km/h</li>
           </ul>
         </div>
-        <div class="buttomSection">
+
+        <div class="weather-forecast">
           <div class="row">
-            <div class="col col--1of6">
-              <div class="forcast-date">Sunday</div>
+            <div class="col-2">
+              <div class="weather-forecast-date">Fri</div>
               <img
-                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
-                width="90px"
-                class="dorcast-icon"
+                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
+                width="75px"
               />
-              <div class="forcast-temp">
-                <span>10°C --</span>
-                <span> 20°C</span>
+              <div class="weather-forecast-temperature">
+                <span class="weather-temperature-max"> 10° </span>
+                <span class="weather-temperature-min"> 12° </span>
               </div>
             </div>
-            <div class="col col--1of6"></div>
-            <div class="col col--1of6"></div>
-            <div class="col col--1of6"></div>
-            <div class="col col--1of6"></div>
-            <div class="col col--1of6"></div>
           </div>
         </div>
+
         <a
-          href="https://github.com/Rezvaneh2022/Great-Weather-App"
+          href="hhttp://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
           target="_blank"
           class="gitLink"
           >Open-source code</a
