--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </ul>
         </div>
 
-        <div class="weather-forecast">
+        <div class="weather-forecast" id="forecast">
           <div class="row">
             <div class="col-2">
               <div class="weather-forecast-date">Fri</div>
