Display forecast with API

--- a/index.html
+++ b/index.html
@@ -63,23 +63,7 @@
             <li>Wind: <span id="wind"></span> km/h</li>
           </ul>
         </div>
-
-        <div class="weather-forecast" id="forecast">
-          <div class="row">
-            <div class="col-2">
-              <div class="weather-forecast-date">Fri</div>
-              <img
-                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
-                width="75px"
-              />
-              <div class="weather-forecast-temperature">
-                <span class="weather-temperature-max"> 10° </span>
-                <span class="weather-temperature-min"> 12° </span>
-              </div>
-            </div>
-          </div>
-        </div>
-
+        <div class="weather-forecast" id="forecast"></div>
         <a
           href="hhttp://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-day.png"
           target="_blank"
