deleted conversion units

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="col-4">
               <img src="#" id="icon" />
             </div>
-            <div class="col-4">
+            <div class="col-4 city-name">
               <h1 id="city"></h1>
             </div>
             <div class="col-4">
@@ -49,10 +49,10 @@
             </div>
           </div>
 
-          <strong id="temperature" class="weather-temperature"> </strong
-          ><span class="units"></span>
-          <a href="#" id="celsius-link" class="active"> °C</a> |
-          <a href="#" id="fahrenheit-link" class="faren">°F</a>
+          <span class="temperatureSection">
+            <strong id="temperature" class="weather-temperature"> </strong
+            ><span class="units">°C</span>
+          </span>
 
           <ul>
             <li>
